force-app/main/default/objects/auara_DailyCommitment__c/auara_DailyCommitment__c.object-meta.xml
<CustomObject>
    <label>Daily Commitment</label>
    <nameField>
        <displayFormat>DCM-{000000}</displayFormat>
        <label>Daily Commitment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>