force-app/main/default/objects/auara_DailyCommitment__c/fields/auara_CommitmentDate__c.field-meta.xml
<CustomField>
    <fullName>auara_CommitmentDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Commitment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>