force-app/main/default/objects/auara_DailyCommitment__c/fields/auara_CommitmentForMeetings__c.field-meta.xml
<CustomField>
    <fullName>auara_CommitmentForMeetings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commitment for Meetings</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>