force-app/main/default/objects/auara_DailyCommitment__c/fields/auara_CommitmentForVisits__c.field-meta.xml
<CustomField>
    <fullName>auara_CommitmentForVisits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commitment for Visits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>