force-app/main/default/objects/auara_DailyCommitment__c/fields/auara_id__c.field-meta.xml
<CustomField>
    <fullName>auara_id__c</fullName>
    <externalId>true</externalId>
    <label>Auara Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>