force-app/main/default/objects/auara_DailyCommitment__c/fields/auara_TargetTimeEstimate__c.field-meta.xml
<CustomField>
    <fullName>auara_TargetTimeEstimate__c</fullName>
    <formula>( auara_CommitmentForVisits__c +  $Setup.auara_UmbralesCompromiso__c.auara_TargetVisitas__c ) +
( auara_CommitmentForMeetings__c +  $Setup.auara_UmbralesCompromiso__c.auara_TargetReuniones__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Time Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>