force-app/main/default/objects/auara_DailyCommitment__c/fields/auara_TimeEstimate__c.field-meta.xml
<CustomField>
    <fullName>auara_TimeEstimate__c</fullName>
    <formula>( auara_CommitmentForVisits__c * $Setup.auara_UmbralesCompromiso__c.auara_CoeficienteVisitas__c ) +
( auara_CommitmentForMeetings__c * $Setup.auara_UmbralesCompromiso__c.auara_CoeficienteReuniones__c ) +
( auara_CommitmentForBeefs__c * $Setup.auara_UmbralesCompromiso__c.auara_CoeficienteBeefs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>